--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,20 @@
 language: d
 
+sudo: required
+
 addons:
   apt:
     packages:
-      libsdl2-dev
+      libsdl1.2-dev
+
+before_script:
+  - wget https://www.libsdl.org/release/SDL2-2.0.7.tar.gz
+  - tar zxvf SDL2-2.0.7.tar.gz
+  - cd SDL2-2.0.7
+  - ./configure
+  - make
+  - sudo make install
+  - cd $TRAVIS_BUILD_DIR
 
 script:
   - dub build
