--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ sudo: required
 addons:
   apt:
     packages:
-      libsdl1.2-dev
+      - libsdl1.2-dev
 
 before_script:
-  - wget https://www.libsdl.org/release/SDL2-2.0.7.tar.gz
-  - tar zxvf SDL2-2.0.7.tar.gz
-  - cd SDL2-2.0.7
+  - wget https://www.libsdl.org/release/SDL2-2.0.5.tar.gz
+  - tar zxvf SDL2-2.0.5.tar.gz
+  - cd SDL2-2.0.5
   - ./configure
   - make
   - sudo make install
