--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ addons:
       - libsdl1.2-dev
 
 before_script:
-  - wget https://www.libsdl.org/release/SDL2-2.0.5.tar.gz
-  - tar zxvf SDL2-2.0.5.tar.gz
-  - cd SDL2-2.0.5
+  - wget https://www.libsdl.org/release/SDL2-2.0.7.tar.gz
+  - tar zxvf SDL2-2.0.7.tar.gz
+  - cd SDL2-2.0.7
   - ./configure
   - make
   - sudo make install
@@ -18,4 +18,4 @@ before_script:
 
 script:
   - dub build
-  - dub test
+  - dub test --debug CI
